# ebay_assistant

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ebay_assistant/: __init__.py  auth.py  cli.py  config.py  drafting.py  ebay_client.py  init_cmd.py  notify.py  orders.py  state.py
tests/: conftest.py  test_auth.py  test_drafting.py  test_init.py  test_orders.py  test_state.py
